text-align on .result fixed

--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ body {
 /***************************** .FACE
 */
 
-.container {
+.face {
     text-align: center;
 }
 
